--- a/Phase1/templates/index.html
+++ b/Phase1/templates/index.html
@@ -6,9 +6,9 @@
     <title>IoT Dashboard</title>
     <!-- Link to Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-   <!-- Link to external stylesheet -->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/styles.css') }}">
-
+	<!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="../static/CSS/styles.css">
+	<!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/styles.css') }}"> -->
 </head>
 
 <body>
