fixed css of iot dashboard

--- a/Phase2/static/styles/dashboard.css
+++ b/Phase2/static/styles/dashboard.css
@@ -124,11 +124,13 @@ footer {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .card-container {
+    flex: 1; 
     padding: 20px;
-    margin: 100px 20px 20px 20px;
+    margin: 20px;
     display: flex;
     justify-content: space-around;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
