--- a/Phase3/templates/index.html
+++ b/Phase3/templates/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles/dashboard.css">
-    <link rel="stylesheet" href="../static/styles/fan.css">
+    <!-- Custom Scripts -->
+    <script src="../static/scripts/clock.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
@@ -18,39 +20,88 @@
     </header>
 
     <div class="dashboard-container">
-        <div class="card-container" style="margin-top: 100px">
+        <div class="card-container" style="margin-top: 100px;">
             <div class="container">
-                <h4><b>Phase 1: LED Control</b></h4>
-                <p id="lightIntensity">Light intensity: </p>
+                <h4><b>Under construction</b></h4>
             </div>
-            <label class="toggle-button">
-                Toggle Light
-                <input id="toggle_button" type="checkbox">
-                <span class="toggle-slider round"></span>
-            </label>
         </div>
 
         <div class="row-container">
-            <div class="card-container">
-                <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
-                    <div class="ceiling-fan horizontal left"></div>
-                    <div class="ceiling-fan horizontal right"></div>
-                    <div class="ceiling-fan vertical rotated top"></div>
-                    <div class="ceiling-fan vertical rotated bottom"></div>
+            <div class="card-container profile">
+                <div id="clock">
+                    <h4 id="date-time"></h4>
                 </div>
-                <button id="fanButton">Turn On/Off</button>
-                <div id="fanStatus">Fan Status: {{ fan_status }}</div> <!-- Fan status -->
+                <h4><b>User Profile</b></h4>
+                <img src="../static/images/avatar.jpg" alt="Avatar" class="avatar">
+                <b>User ID: {{ user }}</b>
+                <b>Name: {{ name }}</b>
+                <div class="input-container">
+                    <label for="temperature">Temperature Threshold:</label>
+                </div>
+                <div class="input-container">
+                    <label for="humidity">Humidity Threshold:</label>
+                </div>
+                <div class="input-container">
+                    <label for="light-intensity">Light Intensity Threshold:</label>
+                </div>
             </div>
-
-            <div class="card-container" style="padding:35px">
-                <h4><b>Temperature</b></h4>
-                <div class="gauge temperature-gauge"></div>
-            </div>
-
-            <div class="card-container" style="padding:35px">
-                <h4><b>Humidity</b></h4>
-                <div class="gauge humidity-gauge"></div>
-            </div>
+            <table>
+                <tr>
+                    <td>
+                        <div class="card-container inline">
+                            <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
+                                <div class="ceiling-fan horizontal left"></div>
+                                <div class="ceiling-fan horizontal right"></div>
+                                <div class="ceiling-fan vertical rotated top"></div>
+                                <div class="ceiling-fan vertical rotated bottom"></div>
+                            </div>
+                            <button id="fanButton">Turn On/Off</button>
+                            <div id="fanStatus">Fan Status: {{ fan_status }}</div> <!-- Fan status -->
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card-container inline" style="height: 300px; flex-direction: row;">
+                            <div class="top-content" style="width: 100%;">
+                                <h4><b>Light Intensity</b></h4>
+                            </div>
+                            <div class="frame center" style="margin: 50px;">
+                                <div class="slider-container">
+                                    <div class="slider center">
+                                        <input class="center" type="range" min="0" max="1000" />
+                                    </div>
+                                    <div class="slider-value center">{{ light_intensity }}</div>
+                                    <p class="light-status">Light Status: {% if light_status %}ON{% else %}OFF{% endif
+                                        %}</p>
+                                    <p>{{ email_status }}</p>
+                                </div>
+                                <div class="wrapper" style="margin: 50px;">
+                                    <div class="light">
+                                        <div class="bulb">
+                                            <span></span>
+                                            <span></span>
+                                        </div>
+                                        <button type="button" class="btn" id="toggle_button">Switch</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="card-container" style="padding: 35px;">
+                            <h4><b>Temperature</b></h4>
+                            <div class="gauge temperature-gauge"></div>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card-container" style="padding: 35px;">
+                            <h4><b>Humidity</b></h4>
+                            <div class="gauge humidity-gauge"></div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 
@@ -73,20 +124,54 @@
         $(document).ready(function () {
             $('#toggle_button').click(function () {
                 $.get('/toggle', function () {
-                    if ($('#toggle_button').prop('checked')) {
+                    
+                    $('.bulb').toggleClass('on');
+
+                    var lightStatus = $('.light-status');
+                    if ($('.bulb').hasClass('on')) {
+                        lightStatus.text('Light Status: ON');
+                    } else {
+                        lightStatus.text('Light Status: OFF');
+                    }
+
+                 
+                    $('body').toggleClass('on');
+
+                    if ($('body').hasClass('on')) {
                         $('body').css({
                             'background': 'linear-gradient(90deg, #a1c4fd, #c2e9fb)',
                             'color': 'black'
                         });
+                        // Turn on the light bulb
+                        $('.bulb').addClass('on');
                     } else {
                         $('body').css({
                             'background': 'linear-gradient(90deg, #2C3E50, #34495E)',
                             'color': 'white'
                         });
+                        // Turn off the light bulb
+                        $('.bulb').removeClass('on');
                     }
                 });
             });
-    
+
+
+            // Event listener for the fan toggle button
+            $('#fanButton').click(function () {
+                $.get('/toggle_fan', function () {
+                    // Toggle the 'on' class on the fan button
+                    var fanButton = $('#fanButton');
+                    if (fanButton.hasClass('on')) {
+                        fanButton.removeClass('on').text('Turn On');
+                    } else {
+                        fanButton.addClass('on').text('Turn Off');
+                    }
+                });
+            });
+
+
+
+
             $('#fanButton').click(function () {
                 $.get('/toggle_fan', function () {
                     var fanContainer = $('.ceiling-container');
@@ -101,11 +186,11 @@
                 });
             });
         });
-    
+
         $(document).ready(function () {
             let temperatureGauge;
             let humidityGauge;
-    
+
             function updateSensorData() {
                 $.get('/sensor_data', function (data) {
                     if ('temperature' in data && 'humidity' in data) {
@@ -116,7 +201,7 @@
                             subtitle: data.temperature.toFixed(2) + '°C',
                             customTicks: [0, 10, 20, 30, 40, 50, 60]
                         });
-    
+
                         humidityGauge = new GaugeChart('.humidity-gauge', {
                             initialValue: data.humidity,
                             higherValue: 100,
@@ -124,7 +209,7 @@
                             subtitle: data.humidity.toFixed(2) + '%',
                             customTicks: [0, 20, 40, 60, 80, 100]
                         });
-    
+
                         temperatureGauge.init();
                         humidityGauge.init();
                         temperatureGauge.update(temperatureGauge, temperatureGauge.toFixed(2) + '°C');
@@ -132,23 +217,12 @@
                     } else {
                         console.error('Invalid data received from server.');
                     }
-
-                    // Update light intensity and status
-                    if ('light_intensity' in data && 'light_status' in data) {
-                        updateLightIntensity(data.light_intensity, data.light_status);
-                    }
                 });
             }
-    
+
             updateSensorData();
             setInterval(updateSensorData, 10000);
         });
-
-        // Function to update light intensity and status
-        function updateLightIntensity(intensity, status) {
-            document.getElementById("lightIntensity").innerText = "Light intensity: " + intensity.toFixed(2);
-            document.getElementById("lightStatus").innerText = "Dark/Light: " + status;
-        }
     </script>
 
     <footer>
