--- a/Phase3/templates/index.html
+++ b/Phase3/templates/index.html
@@ -75,9 +75,8 @@
                                         <input class="center" type="range" min="0" max="1000" />
                                     </div>
                                     <div class="slider-value center">{{ light_intensity }}</div>
-                                    <p class="light-status">Status: {% if light_status %}ON{% else %}OFF{% endif
-                                        %}</p>
-                                    <p>{{ email_status }}</p>
+                                    <p class="light-status">Light Status: {% if light_status %}ON{% else %}OFF{% endif %}</p>
+                                    <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{% endif %}</p>
                                 </div>
                                 <div class="wrapper" style="margin: 50px;">
                                     <div class="light">
