--- a/Phase3/templates/index.html
+++ b/Phase3/templates/index.html
@@ -22,7 +22,7 @@
     <div class="dashboard-container">
         <div class="card-container" style="margin-top: 100px;">
             <div class="container">
-                <h4><b>Phase 1: LED Control</b></h4>
+                <h4><b>LED Control</b></h4>
             </div>
             <label class="toggle-button">
                 Toggle Light
@@ -75,37 +75,38 @@
                                         <input class="center" type="range" min="0" max="1000" />
                                     </div>
                                     <div class="slider-value center">{{ light_intensity }}</div>
-                                    <p class="light-status">Light Status: {% if light_status %}ON{% else %}OFF{% endif %}</p>
-                                    <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{% endif %}</p>
+                                    <p class="light-status"></p>
+                                    <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{%
+                                        endif %}</p>
                                 </div>
                                 <div class="wrapper" style="margin: 50px;">
                                     <div class="light">
-                                        <div class="bulb">
-                                            <span></span>
-                                            <span></span>
-                                        </div>
+                                        <div id="light_intensity" class="bulb {% if light_status %}on{% endif %}"></div>
+                                        <span></span>
+                                        <span></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="card-container" style="padding: 35px;">
-                            <h4><b>Temperature</b></h4>
-                            <div class="gauge temperature-gauge"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="card-container" style="padding: 35px;">
-                            <h4><b>Humidity</b></h4>
-                            <div class="gauge humidity-gauge"></div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
         </div>
+        </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="card-container" style="padding: 35px;">
+                    <h4><b>Temperature</b></h4>
+                    <div class="gauge temperature-gauge"></div>
+                </div>
+            </td>
+            <td>
+                <div class="card-container" style="padding: 35px;">
+                    <h4><b>Humidity</b></h4>
+                    <div class="gauge humidity-gauge"></div>
+                </div>
+            </td>
+        </tr>
+        </table>
+    </div>
     </div>
 
     <svg width="0" height="0" version="1.1" class="gradient-mask" xmlns="http://www.w3.org/2000/svg">
@@ -125,28 +126,44 @@
 
     <script>
         $(document).ready(function () {
+
+            function updateLightStatus() {
+                $.get('/light_status', function (data) {
+                    // Update the light bulb class based on the light status
+                    if (data.light_status === 'ON') {
+                        // Turn on the light bulb
+                        $('.bulb').addClass('on');
+                    } else {
+                        // Turn off the light bulb
+                        $('.bulb').removeClass('on');
+                    }
+
+                    // Toggle the body class based on the light status
+                    $('body').toggleClass('on', data.light_status === 'ON');
+
+                    // Update the light status text
+                    $('.light-status').text('Status: ' + data.light_status);
+                });
+            }
+
+            // Initial call to update light status
+            updateLightStatus();
+
+            // Set interval to update light status every 5 seconds
+            setInterval(updateLightStatus, 5000);
+
+            // Toggle LED2 (GPIO 5) when the button is clicked
             $('#toggle_button').click(function () {
                 $.get('/toggle', function () {
-                    
-                    $('.bulb').toggleClass('on');
-        
-                    var lightStatus = $('.light-status');
-                    if ($('.bulb').hasClass('on')) {
-                        lightStatus.text('Status: ON');
-                        $('.bulb span').addClass('on');
-                    } else {
-                        lightStatus.text('Status: OFF');
-                        $('.bulb span').removeClass('on');
-                    }
-        
-                    $('body').toggleClass('on');
-        
-                    if ($('body').hasClass('on')) {
+                    // Update the background gradient and text color based on the light status
+                    if ($('#toggle_button').prop('checked')) {
+                        // Light is on
                         $('body').css({
                             'background': 'linear-gradient(90deg, #a1c4fd, #c2e9fb)',
                             'color': 'black'
                         });
                     } else {
+                        // Light is off
                         $('body').css({
                             'background': 'linear-gradient(90deg, #2C3E50, #34495E)',
                             'color': 'white'
@@ -154,7 +171,6 @@
                     }
                 });
             });
-
 
             // Event listener for the fan toggle button
             $('#fanButton').click(function () {
@@ -169,9 +185,6 @@
                 });
             });
 
-
-
-
             $('#fanButton').click(function () {
                 $.get('/toggle_fan', function () {
                     var fanContainer = $('.ceiling-container');
@@ -185,9 +198,7 @@
                     }
                 });
             });
-        });
 
-        $(document).ready(function () {
             let temperatureGauge;
             let humidityGauge;
 
@@ -223,29 +234,8 @@
             updateSensorData();
             setInterval(updateSensorData, 10000);
         });
-    </script>
 
-    <script>
-        $(document).ready(function () {
-            function updateLightIntensity() {
-                $.get('/light_intensity', function (data) {
-                    $('.slider-value').text(data.light_intensity);
-                    if (data.light_status === 'ON') {
-                        $('.light-status').text('Status: ON');
-                        $('.bulb').addClass('on');
-                    } else {
-                        $('.light-status').text('Status: OFF');
-                        $('.bulb').removeClass('on');
-                    }
-                });
-            }
-    
-            updateLightIntensity(); // Initial call
-    
-            setInterval(updateLightIntensity, 5000); // Update every 5 seconds
-        });
     </script>
-    
 
     <footer>
         &copy; 2024 - Muhammad Arsalan Saeed, Nabil Ramadan & Hibba Qaraman.
